Fix images background in dark mode.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -208,7 +208,7 @@ code {
 /* Add a drop shadow to images in the user guides and docs */
 .image {
   width: 100%;
-  filter: drop-shadow(2px 4px 6px gray);
+  background: white;
   padding-bottom: 2rem;
   padding-top: 0.5rem;
   display: block;
